# Owerview-doct-marznehshin

./: app.py  main.py  need.txt  pyproject.toml  readme-for.md  readme.md  replit.md  routes.py  translations.py
.github/: FUNDING.yml
.github/workflows/: django.yml  flask.yml
content/docs/: about.md  api-reference.md  configuration.md  getting-started.md  installation.md  overview.md  troubleshooting.md
static/css/: style.css
static/js/: main.js
templates/: base.html  doc_page.html  docs.html  index.html
